--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <!--This is a test edit by Grace-->
+        <!-- This is a test edit by Will-->
         <p> hi :)</p>
     </body>
 </html>
