--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <!--This is a test edit by Grace-->
         <!-- This is a test edit by Will-->
+        <p> Good night</p>
         <p> hi :)</p>
     </body>
 </html>
