--- a/pricing.html
+++ b/pricing.html
@@ -10,7 +10,7 @@
         <div class="container">
             <h2>Pricing</h2>
             <div class="price-row">
-                <div class="price col">
+                <div class="price-col">
                     <p>Product 1</p>
                     <h3>$$$</h3>
                     <ul>
@@ -21,7 +21,7 @@
                     </ul>
                     <button> Book Consultation </button>
                 </div>
-                <div class="price col">
+                <div class="price-col">
                     <p>Product 2</p>
                     <h3>$$$</h3>
                     <ul>
@@ -32,7 +32,7 @@
                     </ul>
                     <button> Book Consultation </button>
                 </div>
-                <div class="price col">
+                <div class="price-col">
                     <p>Product 3</p>
                     <h3>$$$</h3>
                     <ul>
