css background color change

--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title> Pricing Table - Easy Tutorials</title>
+        <title> Pricing</title>
         <link rel ="stylesheet" href="stylesPrice.css">
     </head>
 
