--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!--This is a test edit by Grace-->
         <!-- This is a test edit by Will-->
         <!-- This is a test edit by Chris-->
+        <!-- This is a second test edit by Chris-->
         <p> Good night</p>
         <p> hi :)</p>
     </body>
