--- a/test.html
+++ b/test.html
@@ -10,6 +10,6 @@
         <!-- This is a test edit by Ryan-->
         <p> Good night</p>
         <p> hi :)</p>
-        <p> Wow, did this work? :D </p>
+        <p> This is not a drill - this is a test! </p>
     </body>
 </html>
