Adding About Us Page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="logo">NAME</div>
       <div class="nav-items">
-        <a href="#">Home</a> <a href="#">About Us</a> <a href="#">Products</a> <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
+        <a href="#">Home</a> <a href="aboutus.html">About Us</a> <a href="#">Products</a> <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
       </div>
     </nav>
     <section class="background1">
