--- a/aboutus.html
+++ b/aboutus.html
@@ -10,15 +10,22 @@
         <div class="container">
             <h2>AboutUs</h2>
             <div class="price-row">
-                <div class="price-col">
-                    <p>Will</p>
+                <div class="names">
+                    <p>Grace</p>
                     <h3></h3>
                 </div>
-                <div class="price-col">
+                <div class="names">
+                    <p>Ryan</p>
+                    <h3></h3>
+                </div>
+                <div class="names">
                     <p>Chris</p>
                     <h3></h3>
                 </div>
-                <div class="price-col">
+                <div class="names">
+                    <p>Will</p>
+                    <h3></h3>
+                </div>
                 </div>
             </div>
         </div>
