--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <h2>About Us</h2>
-            <div class="price-row">
+            <div class="names-row">
                 <div class="names">
                     <p>Grace</p>
                     <h3></h3>
