--- a/aboutus.html
+++ b/aboutus.html
@@ -12,19 +12,43 @@
             <div class="names-row">
                 <div class="names">
                     <p>Grace</p>
-                    <h3></h3>
+                    <h3>$$$</h3>
+                    <ul>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                    </ul>
                 </div>
                 <div class="names">
                     <p>Ryan</p>
-                    <h3></h3>
+                    <h3>$$$</h3>
+                    <ul>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                    </ul>
                 </div>
                 <div class="names">
                     <p>Chris</p>
-                    <h3></h3>
+                    <h3>$$$</h3>
+                    <ul>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                    </ul>
                 </div>
                 <div class="names">
                     <p>Will</p>
-                    <h3></h3>
+                    <h3>$$$</h3>
+                    <ul>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                        <li>product desc</li>
+                    </ul>
                 </div>
                 </div>
             </div>
