--- a/aboutus.html
+++ b/aboutus.html
@@ -19,6 +19,7 @@
                         <li>Extra Info</li>
                         <li>Extra Info</li>
                     </ul>
+                    <button> View Product </button>
                 </div>
                 <div class="names">
                     <p>Ryan</p>
@@ -29,6 +30,7 @@
                         <li>Extra Info</li>
                         <li>Extra Info</li>
                     </ul>
+                    <button> View Product </button>
                 </div>
                 <div class="names">
                     <p>Chris</p>
@@ -39,6 +41,7 @@
                         <li>Extra Info</li>
                         <li>Extra Info</li>
                     </ul>
+                    <button> View Product</button>
                 </div>
                 <div class="names">
                     <p>Will</p>
@@ -49,6 +52,7 @@
                         <li>Extra Info</li>
                         <li>Extra Info</li>
                     </ul>
+                    <button> View Product </button>
                 </div>
                 </div>
             </div>
