Name added to line 19

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="background1">
       <div class="container">
         <div class="column-left">
-          <h1> Heading 1 </h1>
+          <h1> Heading 1 Grace</h1>
           <p>
             Purpose of our website or slogan goes in here!
           </p>
