--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p>
             Purpose of our website or slogan goes in here!
           </p>
-          <button>Get Started</button>
+          <button>Chris</button>
         </div>
         <div class="column-right">
           <img src="image/sample.jpg" alt="sample" class="image">
