Change for Shawn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="column-left">
           <h1> Heading 1 </h1>
           <p>
-            Purpose of our website or slogan goes in here!
+            Purpose of our website or slogan goes in here! William
           </p>
           <button>Get Started</button>
         </div>
