--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class = "container2">
             <div class = "center">
                 <h1> Products </h1>
-                <p> Introduction or references to other parts of our website... ideas</p>
+                <p> Introduction or references to other parts of our website... ideas Ryan</p>
                 <button>Book a consultation now</button>
             </div>
         </div>
