--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     <nav>
       <div class="logo">NAME</div>
       <div class="nav-items">
-        <a href="#">Home</a> <a href="aboutus.html">About Us</a> <a href="#">Products</a> <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
+        <a href="#">Home</a> 
+        <a href="aboutus.html">About Us</a> 
+
+        <!-- Dropdown Menu -->
+        <div class="dropdown">
+          <button class="dropbtn">Products
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Chris</a>
+            <a href="#">Grace</a>
+            <a href="#">Ryan</a>
+            <a href="#">William</a>
+          </div>
+        </div> 
+        
+         <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
       </div>
     </nav>
     <section class="background1">
