--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
+    <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav>
       <div class="logo">NAME</div>
       <div class="nav-items">
@@ -15,9 +17,7 @@
 
         <!-- Dropdown Menu -->
         <div class="dropdown">
-          <button class="dropbtn">Products
-            <i class="fa fa-caret-down"></i>
-          </button>
+          Products   
           <div class="dropdown-content">
             <a href="#">Chris</a>
             <a href="#">Grace</a>
@@ -29,6 +29,7 @@
          <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
       </div>
     </nav>
+    <!-- Navigation End. Keep this consistent throughout the pages-->
     <section class="background1">
       <div class="container">
         <div class="column-left">
