--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
           </div>
         </div> 
         
-         <a href="pricing.html">Pricing</a> <a href="contact.html">Contact Us</a>
+         <a href="pricing.html">Pricing</a> 
+         <a href="contact.html">Contact Us</a>
       </div>
     </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
+
+    
     <section class="background1">
       <div class="container">
         <div class="column-left">
