--- a/index.html
+++ b/index.html
@@ -14,20 +14,9 @@
       <div class="nav-items">
         <a href="#">Home</a> 
         <a href="aboutus.html">About Us</a> 
-
-        <!-- Dropdown Menu -->
-        <div class="dropdown">
-          Products   
-          <div class="dropdown-content">
-            <a href="#">Chris</a>
-            <a href="#">Grace</a>
-            <a href="#">Ryan</a>
-            <a href="#">William</a>
-          </div>
-        </div> 
-        
-         <a href="pricing.html">Pricing</a> 
-         <a href="contact.html">Contact Us</a>
+        <a href="#">Products</a> 
+        <a href="pricing.html">Pricing</a> 
+        <a href="contact.html">Contact Us</a>
       </div>
     </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
