--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <a href="pricing.html">Pricing</a> 
         <a href="contact.html">Contact Us</a>
       </div>
+
+      <div class = "dropdown">
+        <button class="dropbtn"> Products </button>
+        <div class = "dropdown-content">
+          <a href= "#"> Chris</a>
+          <a href= "#"> Grace</a>
+          <a href= "#"> Ryan</a>
+          <a href= "#"> William</a>
+        </div>
+      </div>
     </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
