--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -25,7 +25,7 @@
 
         <section class="background1">
           <div class="container">
-            <div class="column-center">
+            <div class="center">
               <h1> Bike Infrastructure Implementation</h1>
               <p>
                 Information about the product
@@ -43,7 +43,9 @@
                 <li> Item 2 </li>
                 <li>Item 3 </li>
               </ul> 
+            </div>
           </div>
+        </section>
 
     </body>
 </html>
