--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -32,6 +32,10 @@
               </p>
               <image src="image/sample.jpg" alt="sample" class = "image"> </image>
             </div>
+        </section>
+        <section class = "background3">
+
+        </section>
             <div class="column-right">
               <h1> Something something something</h1>
               <p> blahblahblah more info blh blalladl</p>
