--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -24,7 +24,7 @@
         <!-- Navigation End. Keep this consistent throughout the pages-->
 
         <section class="background1">
-          <div class="container">
+          <div class="container2">
             <div class="center">
               <h1> Bike Infrastructure Implementation</h1>
               <p>
@@ -32,10 +32,13 @@
               </p>
               <image src="image/sample.jpg" alt="sample" class = "image"> </image>
             </div>
+          </div>
         </section>
         <section class = "background3">
 
         </section>
+        <section class ="background3">
+          <div class = "container1">
             <div class="column-right">
               <h1> Something something something</h1>
               <p> blahblahblah more info blh blalladl</p>
@@ -45,10 +48,11 @@
               <ul id="list1"> 
                 <li> Item 1 </li>
                 <li> Item 2 </li>
-                <li>Item 3 </li>
+                <li> Item 3 </li>
               </ul> 
             </div>
           </div>
+
         </section>
 
     </body>
