--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -30,7 +30,7 @@
               <p>
                 Information about the product
               </p>
-              <image src="image/sample.jpg" alt="sample" class = "image"> </image>
+              <image src="image/sample.jpg" alt="sample" class = "centered"> </image>
             </div>
           </div>
         </section>
