--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,61 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="stylesPrice.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-</head>
-<body>
-    <h1> Contact Page</h1>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+
+    <!-- Navigation Start. Keep this consistent throughout the pages-->
+    <nav>
+      <div class="logo">NAME</div>
+      <div class="nav-items">
+        <a href="#">Home</a> 
+        <a href="aboutus.html">About Us</a> 
+        <div class="dropdown">
+          <button class="dropbtn"> Products </button>
+          <div class="dropdown-content">
+            <a href="#"> Chris</a>
+            <a href="#"> Grace</a>
+            <a href="#"> Ryan</a>
+            <a href="#"> William</a>
+          </div>
+        </div>
+        <a href="pricing.html">Pricing</a> 
+        <a href="contact.html">Contact Us</a>
+      </div>
+    </nav>
+    <!-- Navigation End. Keep this consistent throughout the pages-->
+
+    
+    <section class="background1">
+      <div class="container">
+        <div class="column-left">
+          <h1>Heading 1 Grace</h1>
+          <p>
+            Purpose of our website or slogan goes in here! William
+          </p>
+          <button>Chris</button>
+        </div>
+        <div class="column-right">
+          <img src="image/sample.jpg" alt="sample" class="image">
+        </div>
+      </div>
+    </section>
+    <section class="background2">
+        <div class = "container2">
+            <div class = "center">
+                <h1> Products </h1>
+                <p> Introduction or references to other parts of our website... ideas Ryan</p>
+                <button>Book a consultation now</button>
+            </div>
+        </div>
+    </section>
+  </body>
+</html>
 </body>
 
 
-<!-- Navigation Start. Keep this consistent throughout the pages-->
-<nav>
-    <div class="logo">NAME</div>
-    <div class="nav-items">
-      <a href="#">Home</a> 
-      <a href="aboutus.html">About Us</a> 
-      <div class = "dropdown">
-        <button class="dropbtn"> Products </button>
-        <div class = "dropdown-content">
-          <a href= "#"> Chris</a>
-          <a href= "#"> Grace</a>
-          <a href= "#"> Ryan</a>
-          <a href= "#"> William</a>
-        </div>
-      </div>
-      <a href="pricing.html">Pricing</a> 
-      <a href="contact.html">Contact Us</a>
-    </div>
-  </nav>
-  <!-- Navigation End. Keep this consistent throughout the pages-->
-
-  <section class="background1">
-    <div class="container">
-      <div class="column-left">
-        <h1> Heading 1 Grace</h1>
-        <p>
-          Purpose of our website or slogan goes in here! William
-        </p>
-        <button>Chris</button>
-      </div>
-      <div class="column-right">
-        <img src="image/sample.jpg" alt="sample" class="image">
-      </div>
-    </div>
-  </section>
-
-  </html>
+</html>
