--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,12 @@
 
     
     <section class="background1">
-      <div class="container">
-        <div class="column-left">
-          <h1>Heading 1 Grace</h1>
+      <div class="containerContactUs">
+        <div class="columninner">
+          <h1>Test Header</h1>
           <p>
-            Purpose of our website or slogan goes in here! William
+            This is a p element
           </p>
-          <button>Chris</button>
         </div>
         <div class="column-right">
           <img src="image/sample.jpg" alt="sample" class="image">
