updating my page

--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,11 @@
 
     
     <section class="background1">
-      <div class="containerContactUs">
-        <div class="columninner">
-          <h1>Test Header</h1>
-          <p>
-            This is a p element
-          </p>
-        </div>
-        <div class="column-right">
-          <img src="image/sample.jpg" alt="sample" class="image">
-        </div>
-      </div>
-    </section>
+        <div class="container">
+            <div class="column-leftContactUs">Column left</div>
+            <div class="column-centerContactUs">Column center</div>
+            <div class="column-rightContactUs">Column right</div>
+        </div> 
     <section class="background2">
         <div class = "container2">
             <div class = "center">
