--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     
     <section class="background1">
-        <div class="container">
+        <div class="containerContactUs">
             <div class="column-leftContactUs">Column left</div>
             <div class="column-centerContactUs">Column center</div>
             <div class="column-rightContactUs">Column right</div>
