--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,17 @@
     
     <section class="background1">
         <div class="containerContactUs">
-            <div class="column-leftContactUs">Column left</div>
+            <div class="column-leftContactUs">
+                <div class="price-col">
+                    <p>Chris</p>
+                    <h3>Photo Here</h3>
+                    <ul>
+                        <li>Phone: </li>
+                        <li>Email</li>
+                        <li>LinkedIn</li>
+                    </ul>
+                </div>
+            </div>
             <div class="column-centerContactUs">Column center</div>
             <div class="column-rightContactUs">Column right</div>
         </div> 
