--- a/contact.html
+++ b/contact.html
@@ -31,21 +31,24 @@
 
     
     <section class="background1">
-        <div class="containerContactUs">
-            <div class="column-leftContactUs">
-                <div class="price-col">
-                    <p>Chris</p>
-                    <h3>Photo Here</h3>
-                    <ul>
-                        <li>Phone: </li>
-                        <li>Email</li>
-                        <li>LinkedIn</li>
-                    </ul>
-                </div>
+        <div class="row">
+            <div class="column" style="background-color:#aaa;">
+              <h2>Column 1</h2>
+              <p>Some text..</p>
             </div>
-            <div class="column-centerContactUs">Column center</div>
-            <div class="column-rightContactUs">Column right</div>
-        </div> 
+            <div class="column" style="background-color:#bbb;">
+              <h2>Column 2</h2>
+              <p>Some text..</p>
+            </div>
+            <div class="column" style="background-color:#ccc;">
+              <h2>Column 3</h2>
+              <p>Some text..</p>
+            </div>
+            <div class="column" style="background-color:#ddd;">
+              <h2>Column 4</h2>
+              <p>Some text..</p>
+            </div>
+        </div>
 
         
     <section class="background2">
