--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,17 @@
         <div class="row">
             <div class="column" style="background-color:#aaa;">
               <h2>Column 1</h2>
+              <div class="price-col">
+                <p>Product 1</p>
+                <h3>$$$</h3>
+                <ul>
+                    <li>product desc</li>
+                    <li>product desc</li>
+                    <li>product desc</li>
+                    <li>product desc</li>
+                </ul>
+                <button> Book Consultation </button>
+            </div>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#bbb;">
