--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,9 @@
 
     
     <section class="background1">
+        <div class="background1">
+            <h1>Contact Us</h1>
+        </div>
         <div class="row">
             <div class="column" style="background-color:#aaa;">
               <h2>Column 1</h2>
@@ -55,11 +58,6 @@
               <h2>Column 3</h2>
               <p>Some text..</p>
             </div>
-            <div class="column" style="background-color:#ddd;">
-              <h2>Column 4</h2>
-              <p>Some text..</p>
-            </div>
-        </div>
 
         
     <section class="background2">
