--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,11 @@
 
     
     <section class="background1">
-        <div class="background1">
-            <h1>Contact Us</h1>
-        </div>
         <div class="row">
             <div class="column" style="background-color:#aaa;">
               <h2>Column 1</h2>
               <div class="price-col">
-                <p>Product 1</p>
+                <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
                 <h3>$$$</h3>
                 <ul>
                     <li>product desc</li>
