--- a/contact.html
+++ b/contact.html
@@ -33,26 +33,26 @@
     <section class="background1">
         <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <h2>Column 1</h2>
+              <h2>Address</h2>
               <div class="price-col">
                 <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
                 <h3>$$$</h3>
                 <ul>
-                    <li>product desc</li>
-                    <li>product desc</li>
-                    <li>product desc</li>
-                    <li>product desc</li>
+                    <li>Chirs@fakeEmail.com</li>
+                    <li>Grace@fakeEmail.com</li>
+                    <li>William@fakeEmail.com</li>
+                    <li>Ryan@fakeEmail.com</li>
                 </ul>
                 <button> Book Consultation </button>
             </div>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#bbb;">
-              <h2>Column 2</h2>
+              <h2>Phone</h2>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ccc;">
-              <h2>Column 3</h2>
+              <h2>Email</h2>
               <p>Some text..</p>
             </div>
 
