adding more content

--- a/contact.html
+++ b/contact.html
@@ -43,16 +43,31 @@
                     <li>William@fakeEmail.com</li>
                     <li>Ryan@fakeEmail.com</li>
                 </ul>
-                <button> Book Consultation </button>
             </div>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#bbb;">
               <h2>Phone</h2>
+              <div class="price-col">
+                <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
+                <h3>$$$</h3>
+                <ul>
+                    <li>Chirs@fakeEmail.com</li>
+                    <li>Grace@fakeEmail.com</li>
+                    <li>William@fakeEmail.com</li>
+                    <li>Ryan@fakeEmail.com</li>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ccc;">
               <h2>Email</h2>
+              <div class="price-col">
+                <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
+                <h3>$$$</h3>
+                <ul>
+                    <li>Chirs@fakeEmail.com</li>
+                    <li>Grace@fakeEmail.com</li>
+                    <li>William@fakeEmail.com</li>
+                    <li>Ryan@fakeEmail.com</li>
               <p>Some text..</p>
             </div>
 
