remove bottom section

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
             <div class="column" style="background-color:#aaa;">
               <h2>Address</h2>
               <div class="price-col">
+                <!-- Change the Inline CSS before submission-->
                 <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
                 <h3>$$$</h3>
                 <ul>
@@ -49,6 +50,7 @@
             <div class="column" style="background-color:#bbb;">
               <h2>Phone</h2>
               <div class="price-col">
+                <!-- Change the Inline CSS before submission-->
                 <img src="image/ChrisPhoto.jpg" alt="Chris" class="imground">
                 <h3>$$$</h3>
                 <ul>
@@ -58,6 +60,7 @@
                     <li>Ryan@fakeEmail.com</li>
               <p>Some text..</p>
             </div>
+            <!-- Change the Inline CSS before submission-->
             <div class="column" style="background-color:#ccc;">
               <h2>Email</h2>
               <div class="price-col">
@@ -70,17 +73,6 @@
                     <li>Ryan@fakeEmail.com</li>
               <p>Some text..</p>
             </div>
-
-        
-    <section class="background2">
-        <div class = "container2">
-            <div class = "center">
-                <h1> Products </h1>
-                <p> Introduction or references to other parts of our website... ideas Ryan</p>
-                <button>Book a consultation now</button>
-            </div>
-        </div>
-    </section>
   </body>
 </html>
 </body>
