--- a/contact.html
+++ b/contact.html
@@ -33,19 +33,20 @@
     <section class="background1">
         <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <h2>Column 1</h2>
+              <h2>Chris</h2>
+              <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#bbb;">
-              <h2>Column 2</h2>
+              <h2>Grace/h2>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ccc;">
-              <h2>Column 3</h2>
+              <h2>William</h2>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ddd;">
-              <h2>Column 4</h2>
+              <h2>Ryan</h2>
               <p>Some text..</p>
             </div>
           </div>
