big change, added css for about us

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,26 @@
     <section class="background1">
         <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <h2>Chris</h2>
               <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
-              <p>Some text..</p>
+              <h2>Chris</h2>
+              <div class="container">
+                <h2>About Us</h2>
+                <div class="names-row">
+                    <div class="names">
+                        <p>Grace</p>
+                        <h3>Grace's product: Implementation of separated bike lanes (consult, planning) around a city</h3>
+                        <ul>
+                            <li>Extra Info</li>
+                            <li>Extra Info</li>
+                            <li>Extra Info</li>
+                            <li>Extra Info</li>
+                        </ul>
+                        <button> View Product </button>
+                    </div>
             </div>
             <div class="column" style="background-color:#bbb;">
-              <h2>Grace/h2>
+            <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
+              <h2>Grace</h2>
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ccc;">
