--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <div class="column" style="background-color:#aaa;">
               <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
               <h2>Chris</h2>
-              <div class="container">
+              <div class="containerAU">
                 <h2>About Us</h2>
                 <div class="names-row">
                     <div class="names">
