--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <section class="background1">
         <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
+              <img src="https://commons.wikimedia.org/wiki/File:Mail_ValeJappo.png" alt="Email" class="imground">
               <h2>Chris</h2>
             </div>
             <div class="column" style="background-color:#bbb;">
@@ -42,14 +42,11 @@
               <p>Some text..</p>
             </div>
             <div class="column" style="background-color:#ccc;">
+            <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
               <h2>William</h2>
               <p>Some text..</p>
             </div>
-            <div class="column" style="background-color:#ddd;">
-              <h2>Ryan</h2>
-              <p>Some text..</p>
-            </div>
-          </div>
+        </div>
     </section>
 
     <section class="background2">
