--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
     <section class="background1">
         <div class="row">
             <div class="column" style="background-color:#aaa;">
-              <img src="https://commons.wikimedia.org/wiki/File:Mail_ValeJappo.png" alt="Email" class="imground">
+                <!-- Image Credit: Bruce The Deus, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
+              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Mail_ValeJappo.png" alt="Email" class="imground">
               <h2>Chris</h2>
             </div>
             <div class="column" style="background-color:#bbb;">
