--- a/contact.html
+++ b/contact.html
@@ -35,17 +35,18 @@
             <div class="column" style="background-color:#aaa;">
                 <!-- Image Credit: Bruce The Deus, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
               <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Mail_ValeJappo.png" alt="Email" class="imground">
-              <h2>Chris</h2>
+              <h3>ADDRESS</h3>
+              <h4>Some text..</h4>
             </div>
             <div class="column" style="background-color:#bbb;">
-            <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
-              <h2>Grace</h2>
-              <p>Some text..</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Noun_Project_house_icon_475319_cc.svg/251px-Noun_Project_house_icon_475319_cc.svg.png" alt="Chris Headshot" class="imground">
+              <h3>PHONE</h3>
+              <h4>Some text..</h4>
             </div>
             <div class="column" style="background-color:#ccc;">
-            <img src="image/ChrisPhoto.JPG" alt="Chris Headshot" class="imground">
-              <h2>William</h2>
-              <p>Some text..</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Phone_communication_icon.png" alt="Chris Headshot" class="imground">
+              <h3>EMAIL</h3>
+              <h4>Some text..</h4>
             </div>
         </div>
     </section>
