--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="column" style="background-color:#aaa;">
                 <!-- Image Credit: Bruce The Deus, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Mail_ValeJappo.png" alt="Email" class="imground">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Tokyoship_Mail_icon.svg" alt="Email" class="imground">
               <h3>ADDRESS</h3>
               <h4>Some text..</h4>
             </div>
