--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             </div>
             <div class="column" >
                 <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-            <img src="image/house.jpg" alt="ADDRESS" class="imground">
+            <img src="image/house.jpg" alt="Address" class="imground">
               <h3>ADDRESS</h3>
               <h4>Some text..</h4>
             </div>
