--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,13 @@
     <section class="background1">
         <div class="row">
             <div class="column">
-                <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-              <img src="image/mail.jpg" alt="Email" class="imground">
-              <h3>EMAIL</h3>
-              <h4>Some text..</h4>
-            </div>
+                <div class="center">
+                    <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
+                    <img src="image/mail.jpg" alt="Email" class="imground">
+                    <h3>EMAIL</h3>
+                    <h4>Some text..</h4>
+                    </div>
+                </div>
             <div class="column" >
                 <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
             <img src="image/house.jpg" alt="Address" class="imground">
