--- a/contact.html
+++ b/contact.html
@@ -38,19 +38,23 @@
                     <img src="image/mail.jpg" alt="Email" class="imground">
                     <h3>EMAIL</h3>
                     <h4>Some text..</h4>
-                    </div>
                 </div>
-            <div class="column" >
-                <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-            <img src="image/house.jpg" alt="Address" class="imground">
-              <h3>ADDRESS</h3>
-              <h4>Some text..</h4>
             </div>
+            <div class="column" >
+                <div class="center">
+                    <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
+                    <img src="image/house.jpg" alt="Address" class="imground">
+                    <h3>ADDRESS</h3>
+                    <h4>Some text..</h4>   
+                </div>
+             </div>
             <div class="column">
-                <!--Image Credit: Tokyoship, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons-->
-            <img src="image/phone.jpg" alt="phone number" class="imground">
-              <h3>PHONE</h3>
-              <h4>Some text..</h4>
+                <div class="center">
+                    <!--Image Credit: Tokyoship, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons-->
+                    <img src="image/phone.jpg" alt="phone number" class="imground">
+                    <h3>PHONE</h3>
+                    <h4>Some text..</h4>
+                </div>
             </div>
         </div>
     </section>
