--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
                     <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
                     <img src="image/mail.jpg" alt="Email" class="imground">
                     <h3>EMAIL</h3>
-                    <h4>Some text..</h4>
+                    <h4>Request Quote</h4>
+                    <h5>Quote@notrealemail.com</h5>   
                 </div>
             </div>
             <div class="column" >
@@ -45,7 +46,9 @@
                     <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
                     <img src="image/house.jpg" alt="Address" class="imground">
                     <h3>ADDRESS</h3>
-                    <h4>Some text..</h4>   
+                    <h4>Lindsay Office</h4>
+                    <h5>200 Albert St S</h5>   
+                    <h5>Lindsay, ON K9V 5E6</h5>
                 </div>
              </div>
             <div class="column">
@@ -53,7 +56,8 @@
                     <!--Image Credit: Tokyoship, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons-->
                     <img src="image/phone.jpg" alt="phone number" class="imground">
                     <h3>PHONE</h3>
-                    <h4>Some text..</h4>
+                    <h4>Office</h4>
+                    <h5>(123) 456-7890</h5>   
                 </div>
             </div>
         </div>
