--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             </div>
             <div class="column" >
                 <div class="center">
-                    <!--Image Credit: Halfwitty, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
+                    <!--Image Credit: Dave Gandy, CC BY 3.0 <https://creativecommons.org/licenses/by/3.0>, via Wikimedia Commons-->
                     <img src="image/house.jpg" alt="Address" class="imground">
                     <h3>ADDRESS</h3>
                     <h4>Lindsay Office</h4>
