added href to chris's product

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div class="dropdown">
           <button class="dropbtn"> Products </button>
           <div class="dropdown-content">
-            <a href="#"> Chris</a>
+            <a href="ChrisProduct.html"> Chris</a>
             <a href="#"> Grace</a>
             <a href="#"> Ryan</a>
             <a href="#"> William</a>
