--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -31,19 +31,15 @@
 
     
     <section class="background1">
-      <div class="container">
-        <div class="column-left">
-          <h1> Heading 1 Grace</h1>
-          <p>
-            Purpose of our website or slogan goes in here! William
-          </p>
-          <button>Chris</button>
+        <div class="row">
+          <h3>Test</h3>
         </div>
-        <div class="column-right">
-          <img src="image/sample.jpg" alt="sample" class="image">
+        <div class="row">
+          <h3>Test</h3>
         </div>
-      </div>
     </section>
+
+
     <section class="background2">
         <div class = "container2">
             <div class = "center">
