--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav>
-      <div class="logo">NAME</div>
+      <div class="logo">GR3 Consulting</div>
       <div class="nav-items">
-        <a href="#">Home</a> 
+        <a href="index.html">Home</a> 
         <a href="aboutus.html">About Us</a> 
         <div class = "dropdown">
           <button class="dropbtn"> Products </button>
