--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,19 @@
     </head>
 
     <body>
+         <!-- Navigation Start. Keep this consistent throughout the pages-->
+         <nav>
+            <div class="logo">NAME</div>
+            <div class="nav-items">
+              <a href="index.html">Home</a> 
+              <a href="aboutus.html">About Us</a> 
+              <a href="#">Products</a> 
+              <a href="pricing.html">Pricing</a> 
+              <a href="contact.html">Contact Us</a>
+            </div>
+          </nav>
+          <!-- Navigation End. Keep this consistent throughout the pages-->
+          
         <div class="container">
             <h2>About Us</h2>
             <div class="names-row">
