--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -14,7 +14,7 @@
         <nav>
           <div class="logo">NAME</div>
           <div class="nav-items">
-            <a href="#">Home</a> 
+            <a href="index.html">Home</a> 
             <a href="aboutus.html">About Us</a> 
             <a href="#">Products</a> 
             <a href="pricing.html">Pricing</a> 
