--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="logo">NAME</div>
       <div class="nav-items">
-        <a href="#">Home</a> 
+        <a href="index.html">Home</a> 
         <a href="aboutus.html">About Us</a> 
         <div class = "dropdown">
           <button class="dropbtn"> Products </button>
