--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,27 @@
     </head>
 
     <body>
+        <!-- Navigation Start. Keep this consistent throughout the pages-->
+    <nav>
+        <div class="logo">NAME</div>
+        <div class="nav-items">
+          <a href="index.html">Home</a> 
+          <a href="aboutus.html">About Us</a> 
+          <div class="dropdown">
+            <button class="dropbtn"> Products </button>
+            <div class="dropdown-content">
+              <a href="ChrisProduct.html"> Chris</a>
+              <a href="#"> Grace</a>
+              <a href="#"> Ryan</a>
+              <a href="#"> William</a>
+            </div>
+          </div>
+          <a href="pricing.html">Pricing</a> 
+          <a href="contact.html">Contact Us</a>
+        </div>
+      </nav>
+      <!-- Navigation End. Keep this consistent throughout the pages-->
+      
         <div class="container">
             <h2>Pricing</h2>
             <div class="price-row">
