--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -10,7 +10,7 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav>
-      <div class="logo">NAME</div>
+      <div class="logo">GR3 Consulting</div>
       <div class="nav-items">
         <a href="index.html">Home</a> 
         <a href="aboutus.html">About Us</a> 
