--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -10,18 +10,26 @@
 
     <body>
 
-        <!-- Navigation Start. Keep this consistent throughout the pages-->
-        <nav>
-          <div class="logo">NAME</div>
-          <div class="nav-items">
-            <a href="index.html">Home</a> 
-            <a href="aboutus.html">About Us</a> 
-            <a href="#">Products</a> 
-            <a href="pricing.html">Pricing</a> 
-            <a href="contact.html">Contact Us</a>
+       <!-- Navigation Start. Keep this consistent throughout the pages-->
+    <nav>
+      <div class="logo">GR3 Consulting</div>
+      <div class="nav-items">
+        <a href="index.html">Home</a> 
+        <a href="aboutus.html">About Us</a> 
+        <div class = "dropdown">
+          <button class="dropbtn"> Products </button>
+          <div class = "dropdown-content">
+            <a href= "ChrisProduct.html"> Chris</a>
+            <a href= "#"> Grace</a>
+            <a href= "#"> Ryan</a>
+            <a href= "#"> William</a>
           </div>
-        </nav>
-        <!-- Navigation End. Keep this consistent throughout the pages-->
+        </div>
+        <a href="pricing.html">Pricing</a> 
+        <a href="contact.html">Contact Us</a>
+      </div>
+    </nav>
+    <!-- Navigation End. Keep this consistent throughout the pages-->
 
         <section class="background1">
           <div class="container2">
