--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
     <head>
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> About Us</title>
-        <link rel ="stylesheet" href="stylesAboutUs.css">
+        <link rel ="stylesheet" href="styles.css">
     </head>
 
     <body>
