--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             <a href= "ChrisProduct.html"> Chris</a>
             <a href= "#"> Grace</a>
             <a href= "#"> Ryan</a>
-            <a href= "#"> William</a>
+            <a href= "WillProduct.html">William</a>
             </div>
         </div> 
         <a href="contact.html">Contact Us</a>
