--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -22,7 +22,7 @@
             <a href= "ChrisProduct.html"> Chris</a>
             <a href= "#"> Grace</a>
             <a href= "#"> Ryan</a>
-            <a href= "#"> William</a>
+            <a href= "WillProduct.html">William</a>
           </div>
         </div>
         <a href="pricing.html">Pricing</a> 
