--- a/aboutus.html
+++ b/aboutus.html
@@ -65,12 +65,9 @@
                 <button> View Product</button>
             </div>
             <div class="names">
-                <p>Will</p>
+                <p>William Inglis</p>
                 <h3>William's product: Implementation of trip planning for provincal parks in Ontario</h3>
                 <ul>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
                     <li>Extra Info</li>
                 </ul>
                 <button> View Product </button>
