--- a/WillProduct.html
+++ b/WillProduct.html
@@ -33,8 +33,7 @@
         <div class="row">
           <h3>Test</h3>
         </div>
-        <div class="row">
-          <h3>Test</h3>
+        <img src="image/Willydog.jpg" alt="sample" class="image">
         </div>
     </section>
 
