--- a/WillProduct.html
+++ b/WillProduct.html
@@ -31,7 +31,7 @@
     
     <section class="background1">
         <div class="row">
-          <h3>Test</h3>
+          <h3>Who is William?</h3>
         </div>
         <img src="image/Willydog.jpg" alt="sample" class="image">
         </div>
