Trying to get this photo to work

--- a/WillProduct.html
+++ b/WillProduct.html
@@ -33,7 +33,7 @@
         <div class="row">
           <h3>Who is William?</h3>
         </div>
-        <img src="Willydog.jpg" alt="sample" class="image">
+        <img src="image/ChrisPhoto.JPG" alt="sample" class="image">
         </div>
     </section>
 
