--- a/WillProduct.html
+++ b/WillProduct.html
@@ -32,7 +32,7 @@
     <section class="background1">
         <div class="row">
           <h3>Who is William?</h3>
-        </div>
+        </div class="column-right">
         <img src="image/willy.JPG" alt="sample" class="image">
         </div>
     </section>
