grace's page css

--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -46,12 +46,12 @@
 
         </section>
         <section class ="background3">
-          <div class = "container1">
+          <div class = "container2">
             <div class="column-right">
-              <h1> Something something something</h1>
-              <p> blahblahblah more info blh blalladl</p>
+              <h1 id="HLayout1"> Something something something</h1>
+              <p id="PLayout"> blahblahblah more info blh blalladl</p>
             </div>
-            <div class = "column-center">
+            <div class = "center">
               <h1> Summary </h1>
               <ul id="list1"> 
                 <li> Item 1 </li>
