bike page css and html update

--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -35,7 +35,7 @@
           <div class="container2">
             <div class="center">
               <h1> Bike Infrastructure Implementation</h1>
-              <p>
+              <p id="PLayout2">
                 Information about the product
               </p>
               <image src="image/sample.jpg" alt="sample" class = "centered"> </image>
@@ -47,7 +47,7 @@
         </section>
         <section class ="background3">
           <div class = "container2">
-            <div class="column-right">
+            <div class="center">
               <h1 id="HLayout1"> Something something something</h1>
               <p id="PLayout"> blahblahblah more info blh blalladl</p>
             </div>
