--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -36,7 +36,7 @@
             <div class="center">
               <h1> Bike Infrastructure Implementation</h1>
               <p id="PLayout2">
-                Information about the product
+                The methods involve developing a topologically correct street network with updated capacity and employing numerous scenarios to evaluate the overall impact on traffic from separated bike lanes. The first scenario is the base case scenario, where capacity remains untouched. The subsequent scenarios employ a reduction in capacity on traffic lanes with existing narrow bike lanes by 25%, 50%, 75%, and 100%. 
               </p>
               <image src="image/sample.jpg" alt="sample" class = "centered"> </image>
             </div>
