--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -52,7 +52,7 @@
               <p id="PLayout"> blahblahblah more info blh blalladl</p>
             </div>
             <div class = "center">
-              <h1> Summary </h1>
+              <h1 id = "HLayout1"> Summary </h1>
               <ul id="list1"> 
                 <li> Item 1 </li>
                 <li> Item 2 </li>
