--- a/index.html
+++ b/index.html
@@ -84,25 +84,22 @@
   <body>
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
-    <nav>
-      <div class="navbar">
-          <div class="logo">GR3 Consulting</div>
-          <a href="index.html">Home</a>
-          <a href="aboutus.html">About Us</a>
-          <a href="contact.html">Contact Us</a>
-          <div class="dropdown-content">
-            <button class="dropbtn">Products
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href= "ChrisProduct.html"> Chris</a>
-                <a href= "#"> Grace</a>
-                <a href= "#"> Ryan</a>
-                <a href= "WillProduct.html">William</a>
-            </div>
-          </div>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+      <div class="dropdown">
+        <button class="dropbtn">Products
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href= "ChrisProduct.html"> Chris</a>
+          <a href= "#"> Grace</a>
+          <a href= "#"> Ryan</a>
+          <a href= "WillProduct.html">William</a>
+        </div>
       </div>
-      </nav>
+    </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     
