--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <body>
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
+  <nav>
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
@@ -100,6 +101,7 @@
         </div>
       </div>
     </div>
+  </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     
