--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
+      <div class="logo">GR3 Consulting</div>
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="contact.html">Contact Us</a>
