--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -10,25 +10,24 @@
 
     <body>
 
-       <!-- Navigation Start. Keep this consistent throughout the pages-->
-    <nav>
+    <!-- Navigation Start. Keep this consistent throughout the pages-->
+    <div class="navbar">
       <div class="logo">GR3 Consulting</div>
-      <div class="nav-items">
-        <a href="index.html">Home</a> 
-        <a href="aboutus.html">About Us</a> 
-        <div class = "dropdown">
-          <button class="dropbtn"> Products </button>
-          <div class = "dropdown-content">
-            <a href= "ChrisProduct.html"> Chris</a>
-            <a href= "#"> Grace</a>
-            <a href= "#"> Ryan</a>
-            <a href= "WillProduct.html">William</a>
-          </div>
+      <a href="index.html">Home</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+      <div class="dropdown">
+        <button class="dropbtn">Products
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href= "ChrisProduct.html"> Chris</a>
+          <a href= "#"> Grace</a>
+          <a href= "#"> Ryan</a>
+          <a href= "WillProduct.html">William</a>
         </div>
-        <a href="pricing.html">Pricing</a> 
-        <a href="contact.html">Contact Us</a>
       </div>
-    </nav>
+    </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
         <section class="background1">
@@ -38,7 +37,73 @@
               <p id="PLayout2">
                 The methods involve developing a topologically correct street network with updated capacity and employing numerous scenarios to evaluate the overall impact on traffic from separated bike lanes. The first scenario is the base case scenario, where capacity remains untouched. The subsequent scenarios employ a reduction in capacity on traffic lanes with existing narrow bike lanes by 25%, 50%, 75%, and 100%. 
               </p>
-              <image src="image/sample.jpg" alt="sample" class = "centered"> </image>
+              <!-- Slideshow-->
+
+              <!-- Container for the image gallery -->
+              <div class="container">
+
+                <!-- Full-width images with number text -->
+                <div class="mySlides">
+                  <div class="numbertext">1 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <div class="mySlides">
+                  <div class="numbertext">2 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <div class="mySlides">
+                  <div class="numbertext">3 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <div class="mySlides">
+                  <div class="numbertext">4 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <div class="mySlides">
+                  <div class="numbertext">5 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <div class="mySlides">
+                  <div class="numbertext">6 / 6</div>
+                  <img src="image/sample.jpg" alt="sample" class="image">
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                <!-- Image text -->
+                <div class="caption-container">
+                  <p id="caption"></p>
+                </div>
+
+                <!-- Thumbnail images -->
+                <div class="row">
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(1)">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(2)">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(3)">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(4)">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(5)">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(6)">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
@@ -51,16 +116,6 @@
               <h1 id="HLayout1"> Something something something</h1>
               <p id="PLayout"> blahblahblah more info blh blalladl</p>
             </div>
-            <div class = "center">
-              <h1 id = "HLayout1"> Summary </h1>
-              <ul id="list1"> 
-                <li> Item 1 </li>
-                <li> Item 2 </li>
-                <li> Item 3 </li>
-              </ul> 
-            </div>
-          </div>
-
         </section>
 
     </body>
