--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bike Infrastructure</title>
         <link rel="stylesheet" href="styles.css" />
+        <script src="Script.js"></script>
     </head>
     
 
