--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -41,7 +41,7 @@
               <!-- Slideshow-->
 
               <!-- Container for the image gallery -->
-              <div class="container">
+              <div class="container4">
 
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
